[Feature] Add PUT /api/v1/receipts/{receiptId} (#112)